// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`status > render animated 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__bt4zrjc"
    >
      <span
        class="styles__bt4zrj6 styles_sentiment_success__bt4zrja"
      />
      <span
        class="styles__bt4zrj0 styles_sentiment_success__bt4zrj4"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`status > render with className 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="test styles__bt4zrjc"
    >
      <span
        class="styles__bt4zrj0 styles_sentiment_success__bt4zrj4"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`status > renders correctly with type="danger" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__bt4zrjc"
    >
      <span
        class="styles__bt4zrj0 styles_sentiment_danger__bt4zrj1"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`status > renders correctly with type="info" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__bt4zrjc"
    >
      <span
        class="styles__bt4zrj0 styles_sentiment_info__bt4zrj2"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`status > renders correctly with type="neutral" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__bt4zrjc"
    >
      <span
        class="styles__bt4zrj0 styles_sentiment_neutral__bt4zrj3"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`status > renders correctly with type="success" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__bt4zrjc"
    >
      <span
        class="styles__bt4zrj0 styles_sentiment_success__bt4zrj4"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`status > renders correctly with type="warning" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__bt4zrjc"
    >
      <span
        class="styles__bt4zrj0 styles_sentiment_warning__bt4zrj5"
      />
    </span>
  </div>
</DocumentFragment>
`;
